<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pictureregisteruser"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:clickable="true"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="70dp"
            android:scaleType="centerCrop"
            android:src="@drawable/man"
            android:elevation="3dp"
            android:backgroundTint="@color/colorboton"
            android:focusable="true">

        </de.hdodenhof.circleimageview.CircleImageView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="-57dp"
            android:layout_marginEnd="-57dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Firstname"
                android:textColor="@color/colorboton"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/firstnameregisteruser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belizaire"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:maxLines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LastName"
                android:textColor="@color/colorboton"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/lastnameregisteruser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ismoy"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:maxLines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorboton"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/emailregisteruser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tikonsil509_com_cl"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:maxLines="2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/colorboton"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/passwordregisteruser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secure"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:maxLines="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado"
                android:textColor="@color/colorboton"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/estadoregisteruser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:maxLines="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textColor="@color/colorboton"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/telefonoregisteruser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_56973030630"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:maxLines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role"
                android:textColor="@color/colorboton"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/cargoregisteruser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:maxLines="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topup"
                android:textColor="@color/colorboton"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/topupregisteruser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:maxLines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:text="@string/moncash"
                android:textColor="@color/colorboton"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/moncashregisteruser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:maxLines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:text="@string/natcash"
                android:textColor="@color/colorboton"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/natcashregisteruser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:maxLines="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:text="@string/lapoula"
                android:textColor="@color/colorboton"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lapoularegisteruser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="51dp"
            android:layout_marginEnd="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorboton"
                android:text="@string/action"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"/>
            <ImageView
                android:id="@+id/imageeditregistreduser"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/bg_editrounded"
                android:clickable="true"
                android:src="@drawable/ic_baseline_edit_24"
                app:tint="@color/white"
                android:focusable="true" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchregisteruser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/thumb"
                app:track="@drawable/track"
                app:showText="false"
                android:layout_marginTop="60dp"
                android:clickable="true"
                android:focusable="true">

            </androidx.appcompat.widget.SwitchCompat>
            <ImageView
                android:id="@+id/deleteuser"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:clickable="true"
                android:background="@drawable/bg_delete_rounded"
                android:src="@drawable/ic_baseline_delete_24"
                app:tint="@color/white"
                android:layout_marginTop="40dp"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>