<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homenav.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.tikonsil.tikonsil509admin.ui.fragment.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_registerUsersFragment"
            app:destination="@id/registerUsersFragment" />
        <action
            android:id="@+id/action_homeFragment_to_historySalesFragment"
            app:destination="@id/historySalesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_countryPriceFragment"
            app:destination="@id/countryPriceFragment" />
        <action
            android:id="@+id/action_homeFragment_to_listNotificationFragment"
            app:destination="@id/listNotificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerUsersFragment"
        android:name="com.tikonsil.tikonsil509admin.ui.fragment.registered_users.Registered_UsersFragment"
        android:label="@string/Registeredusers"
        tools:layout="@layout/fragment_registered_users" >
        <action
            android:id="@+id/action_registerUsersFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/historySalesFragment"
        android:name="com.tikonsil.tikonsil509admin.ui.fragment.historysales.HistorySalesFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history_sales" >
        <action
            android:id="@+id/action_historySalesFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/countryPriceFragment"
        android:name="com.tikonsil.tikonsil509admin.ui.fragment.countryprice.CountryPriceFragment"
        android:label="@string/country_price"
        tools:layout="@layout/fragment_country_price" >
        <action
            android:id="@+id/action_countryPriceFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.tikonsil.tikonsil509admin.ui.fragment.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/listNotificationFragment"
        android:name="com.tikonsil.tikonsil509admin.ui.fragment.listnotification.ListNotificationFragment"
        android:label="@string/notificationList"
        tools:layout="@layout/fragment_list_notification" >
        <action
            android:id="@+id/action_listNotificationFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

</navigation>